--- a/styles.css
+++ b/styles.css
@@ -694,7 +694,7 @@ body {
 
 }
 /* #tienes1, #tienes2, #asis, #conf, .yes-no-input{
-    margin-top: 5%;
+    margin-top: 5%
 } */
 #lin1{
     margin-top: -8%;
