--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ body {
     padding: 0;
     overflow-x: hidden;
     width: 100%;
+    overflow-y: auto;
 }
 
 .container {
@@ -1499,9 +1500,13 @@ body {
          .panel:nth-child(2) {
             padding: 0px 20px;
         }
-        .carousel-container {
-            margin-top: 15%;
-        }
+    .carousel-container {
+        margin-top: 15%;
+    }
+    
+    .carousel-item {
+        background-position: center center !important;
+    }
         
     .countdown-container {
         margin: 4rem auto 6rem auto
